feat(device) detect brand Lenovo: Tab K10 (TB-X6C6F) feat(device) detect brand Vivo: V17 (1920_20), iQOO Z3 (I2011) feat(device) detect brand Mobicel: Neo feat(device) detect brand ZTE: Axon 30 Pro (A2022), Axon 30 (A2322G) feat(device) detect brand Tecno Mobile: Camon 18 Premier (CH9n), Camon 18 (CH6n), Pop 5P (BD3), Spark 7 (KF6i)
feat(device) added test for brand ZTE: Blade L9

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3344,13 +3344,15 @@ VGO TEL:
 
 # Vivo (vivo.com.cn, vivo.com)
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/|NOA )vivo(?!(?:Browser)| 4G_r))|(?:V1730(D[AT]|GA)|V18(01A0|13B[AT])|1819|I(?:192[78]|2012)|V(?:2006|202[2-9]|203[0-35-9]|204[0-3568]|205[02-5789]|206[015689]|2070|210[12459]|211[01]|212[049])|V(?:2026|2031|2036|2043)_21|V1936AL|V(?:1732|1809|181[3468]|182[149]|183[1268]|1901|191[13469]|192[1-48]|193[0246]|194[15]|195[05]|196[235]|198[16]|1990|200[125]|201[12]|202[03-5]|203[146]|204[6789]|205[45679]|2066B|206[1568]|207[23]|208[05]|2099|2106|211[18]|212[13]|213[346]|214[1358])A|V1824BA|V(?:1731|1818|2020)CA|V(?:1818|1938)CT|V(?:1730|2031)EA|V(?:1732|1809|181[3468]|182[19]|183[1268]|1901|1913|1938)T|X50 Pro\+)(?:[);/ ]|$)'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/|NOA )vivo(?!(?:Browser)| 4G_r))|(?:V1730(D[AT]|GA)|V18(01A0|13B[AT])|1819|I(?:192[78]|2012)|V(?:2006|202[2-9]|203[0-35-9]|204[0-3568]|205[02-5789]|206[015689]|2070|210[12459]|211[01]|212[049])|V(?:2026|2031|2036|2043)_21|V1936AL|V(?:1732|1809|181[3468]|182[149]|183[1268]|1901|191[13469]|192[1-48]|193[0246]|194[15]|195[05]|196[235]|198[16]|1990|200[125]|201[12]|202[03-5]|203[146]|204[6789]|205[45679]|2066B|206[1568]|207[23]|208[05]|2099|2106|211[18]|212[13]|213[346]|214[1358])A|V1824BA|V(?:1731|1818|2020)CA|V(?:1818|1938)CT|V(?:1730|2031)EA|V(?:1732|1809|181[3468]|182[19]|183[1268]|1901|1913|1938)T|I2011|X50 Pro\+)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A(?:[);/ ]|$)'
       model: 'iQOO'
     - regex: 'V1955A(?:[);/ ]|$)'
       model: 'iQOO 3'
+    - regex: 'I2011(?:[);/ ]|$)'
+      model: 'iQOO Z3'
     - regex: 'I192[78](?:[);/ ]|$)'
       model: 'iQOO 3 5G'
     - regex: 'V2049A(?:[);/ ]|$)'
@@ -3469,7 +3471,7 @@ Vivo:
       model: 'V17 Pro'
     - regex: 'vivo 1907(?:_19)?(?:[);/ ]|$)'
       model: 'V17 Neo'
-    - regex: 'vivo 19(?:20|19)(?:[);/ ]|$)'
+    - regex: 'vivo 19(?:20(?:_20)?|19)(?:[);/ ]|$)'
       model: 'V17'
     - regex: 'vivo 1933(?:[);/ ]|$)'
       model: 'V19'
@@ -10298,7 +10300,7 @@ Lenovo:
     - regex: 'TB2-X30[FL]'
       model: 'Tab 2 A10-30'
       device: 'tablet'
-    - regex: 'TB-X6C6X'
+    - regex: 'TB-X6C6[XF]'
       model: 'Tab K10'
       device: 'tablet'
     - regex: 'YT3-X50[FLM]'
@@ -12011,7 +12013,7 @@ Mobiola:
 
 # Mobicel or Mobicell
 Mobicel:
-  regex: 'Mobicel_(R1)|ASTRO(?: Build|[;)]|$)|(?:Android 8.+ BEAM|FAME(?:_DS)?|CLIK|R7_1|HYPE|DANDY(?:_ZAM)?|(?<!SMADL )Matrix|VENUS_G|TRENDY PLUS|FENDY_DS|TANGO_LITE|BLINK|BERRY[_ ]?(?:[12]|PLUS)|R1PLUS_1|ZOOM-H|REBEL|LEGEND MAX|HERO_DS|Switch[ _]GO|SWITCH1|PULSE_1|TRENDY 2|TRENDY_LITE|FEVER_PLUS_[HJ]|RIO_SS|Clik plus|PURE PLUS|Neo[ _]LTE|Titan_1|ZOOM_1)(?:[);/ ]|$)'
+  regex: 'Mobicel_(R1)|ASTRO(?: Build|[;)]|$)|(?:Android 8.+ BEAM|FAME(?:_DS)?|CLIK|R7_1|HYPE|DANDY(?:_ZAM)?|(?<!SMADL )Matrix|VENUS_G|TRENDY PLUS|FENDY_DS|TANGO_LITE|BLINK|BERRY[_ ]?(?:[12]|PLUS)|R1PLUS_1|ZOOM-H|REBEL|LEGEND MAX|HERO_DS|Switch[ _]GO|SWITCH1|PULSE_1|TRENDY 2|TRENDY_LITE|FEVER_PLUS_[HJ]|RIO_SS|Clik plus|PURE PLUS|Neo[ _]LTE|Titan_1|ZOOM_1|NEO_1)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Matrix'
@@ -12064,6 +12066,8 @@ Mobicel:
       model: 'Beam'
     - regex: 'Neo[ _]LTE'
       model: 'Neo LTE'
+    - regex: 'NEO_1'
+      model: 'Neo'
     - regex: 'RIO_SS'
       model: 'Rio SS'
     - regex: 'Switch[ _]GO'
@@ -17693,6 +17697,10 @@ Tecno Mobile:
       model: 'Camon 17 Pro'
     - regex: 'Tecno[ _-]CG7n?(?:[);/ ]|$)'
       model: 'Camon 17P'
+    - regex: 'Tecno[ _-]CH9n?(?:[);/ ]|$)'
+      model: 'Camon 18 Premier'
+    - regex: 'Tecno[ _-]CH6n?(?:[);/ ]|$)'
+      model: 'Camon 18'
     - regex: 'Tecno[ _-]CA6(?:[);/ ]|$)'
       model: 'Camon CM'
     - regex: 'Tecno[ _-]CA7(?:[);/ ]|$)'
@@ -17739,6 +17747,8 @@ Tecno Mobile:
       model: 'Pop 4 LTE'
     - regex: 'TECNO[ _]BD2p(?:[);/ ]|$)'
       model: 'Pop 5'
+    - regex: 'TECNO[ _]BD3(?:[);/ ]|$)'
+      model: 'Pop 5P'
     - regex: 'Tecno[ _]KA7O?(?:[);/ ]|$)'
       model: 'Spark 2'
     - regex: 'Tecno[ _]LB6?(?:[);/ ]|$)'
@@ -17765,7 +17775,7 @@ Tecno Mobile:
       model: 'Spark 6 Air'
     - regex: 'TECNO[ _]KE5[jk]?(?:[);/ ]|$)'
       model: 'Spark 6 Go'
-    - regex: 'TECNO[ _](?:KF6[nmjk]?|PR651H?)(?:[);/ ]|$)'
+    - regex: 'TECNO[ _](?:KF6[nmjki]?|PR651H?)(?:[);/ ]|$)'
       model: 'Spark 7'
     - regex: 'TECNO[ _]KF8(?:[);/ ]|$)'
       model: 'Spark 7 Pro'
@@ -20746,6 +20756,10 @@ ZTE:
       model: 'Axon 11'
     - regex: 'A2022PG'
       model: 'Axon 30 Ultra'
+    - regex: 'A2022'
+      model: 'Axon 30 Pro'
+    - regex: 'A2322G'
+      model: 'Axon 30'
     - regex: 'N799D(?:[);/ ]|$)'
       model: 'Blade Eg'
     - regex: 'Z818L(?:[);/ ]|$)'
