Adds detection for Dreamgate brand and Dreamgate Sens 5

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -25952,6 +25952,14 @@ Dragon Touch:
   device: 'tablet'
   model: '$1'
 
+# Dreamgate
+Dreamgate:
+  regex: 'Sens 5(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'Sens 5(?:[);/ ]|$)'
+      model: 'Sens 5'
+
 # AOpen
 AOpen:
   regex: '(WT(?:22|19)M-FI)(?:[);/ ]|$)'
