Adds detection for HERO brand and HERO SP-001

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17496,6 +17496,14 @@ Helio:
   device: 'smartphone'
   model: '$1'
 
+# HERO (https://www.only4hero.com/)
+HERO:
+  regex: 'SP-001(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'SP-001(?:[);/ ]|$)'
+      model: 'SP-001'
+
 # Syrox
 Syrox:
   regex: '(SYX-(?:T70[04]|T10[12]))(?:[);/ ]|$)'
