Adds detection for Vsmart Hobson

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -23259,7 +23259,7 @@ Cloudfone:
 
 # Vsmart
 Vsmart:
-  regex: '(?:Joy [123]\+|Joy [34]|Active 1\+|Bee 3|Active 3)(?:[);/ ]|$)'
+  regex: '(?:Joy [123]\+|Joy [34]|Active 1\+|Bee 3|Active 3|V341U)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Joy ([123])\+(?:[);/ ]|$)'
@@ -23272,6 +23272,8 @@ Vsmart:
       model: 'Bee 3'
     - regex: 'Active 3(?:[);/ ]|$)'
       model: 'Active 3'
+    - regex: 'V341U(?:[);/ ]|$)'
+      model: 'Hobson'
 
 # MiXzo
 MiXzo:
