Adds detection for NOGA brand and NOGA NOGAPAD 7G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12948,6 +12948,15 @@ Noblex:
     - regex: '(?:Noblex|NBX)[ _-]([^;/)]+)(?:[;/)]|$)'
       model: '$1'
 
+# NOGA (https://noganet.ar/)
+NOGA:
+  regex: 'NOGAPAD7G(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'NOGAPAD7G(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'NOGAPAD 7G'
+
 # Nomu
 Nomu:
   regex: '(?:Nomu[ _-](?:T18|S30mini|S10)|(?:V1600S|S10 PRO|S50_Pro))(?:[);/ ]|$)'
