Improves detection for Samsung Galaxy A21

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15570,7 +15570,7 @@ Samsung:
       model: 'Galaxy A12'
     - regex: '(?:SAMSUNG-)?SM-(?:A205(?:U1|YN|[FGSWU])|S205DL)|SC-02M|SCV46'
       model: 'Galaxy A20'
-    - regex: '(?:SAMSUNG-)?(?:SM-A215(?:DL|U1|[UW])|SC-42A|SCV49)(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?(?:SM-A215(?:DL|U1|[UW])|SM-S215DL|SC-42A|SCV49)(?:[);/ ]|$)'
       model: 'Galaxy A21'
     - regex: '(?:SAMSUNG-)?SM-A217[FMN](?:[);/ ]|$)'
       model: 'Galaxy A21s'
