Adds detection for A1 Alpha 21

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -23701,10 +23701,12 @@ A1:
   models:
     - regex: 'A1 Alpha 20\+'
       model: 'Alpha 20 Plus'  # ZTE Blade V2020
-    - regex: 'A1 Alpha'
-      model: 'Alpha'
     - regex: 'Alpha 20'
       model: 'Alpha 20'
+    - regex: 'Alpha 21'
+      model: 'Alpha 21'
+    - regex: 'A1 Alpha'
+      model: 'Alpha'
 
 # Swisstone
 Swisstone:
