Adds detection for POPTEL brand and POPTEL P9000 Max

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -24371,6 +24371,14 @@ Poppox:
   device: 'smartphone'
   model: 'P3'
 
+# POPTEL (https://www.poptelmobile.com/)
+POPTEL:
+  regex: 'P9000_MAX(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'P9000_MAX(?:[);/ ]|$)'
+      model: 'P9000 Max'
+
 # Zentality (zentalityinfo.com)
 Zentality:
   regex: 'C-723ULTRA(?:[);/ ]|$)'
