Adds detection for Hafury GT20

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7280,9 +7280,11 @@ Gtel:
 
 # Hafury
 Hafury:
-  regex: 'HAFURY'
+  regex: 'HAFURY|GT20(?:[);/ ]|$)'
   device: 'smartphone'
   models:
+    - regex: 'GT20(?:[);/ ]|$)'
+      model: 'GT20'
     - regex: '(MIX|UMAX)'
       model: '$1'
 
