Adds detection for H96 Max RK3318

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7287,6 +7287,8 @@ H96:
   regex: 'H96[ _]'
   device: 'tv'
   models:
+    - regex: 'Max RK3318(?:[);/ ]|$)'
+      model: 'Max RK3318'
     - regex: 'Max(?:[);/ ]|$)'
       model: 'Max'
 
