Adds detection for Andowl QG9

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -24044,7 +24044,7 @@ UNIWA:
 
 # ANDOWL (www.andowlph.com)
 Andowl:
-  regex: 'ANDOWL-(Q[45])(?:[);/ ]|$)|Andowl'
+  regex: '(?:ANDOWL-)?(Q[45]|QG9)(?:[);/ ]|$)|Andowl'
   device: 'tv'
   model: '$1'
 
