Adds detection for Unknown FO-R15

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -26614,7 +26614,7 @@ Meizu:
 
 # Devices with undectable brand, but detectable model
 Unknown:
-  regex: 'WebTV/(\d+\.\d+)|(?:M10 Ultra)(?:[);/ ]|$)'
+  regex: 'WebTV/(\d+\.\d+)|(?:M10 Ultra|FO-R15)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'WebTV/(\d+\.\d+)'
@@ -26623,3 +26623,6 @@ Unknown:
     - regex: 'M10 Ultra(?:[);/ ]|$)'
       device: 'phablet'
       model: 'M10 Ultra' # clone xiaomi m10 ultra
+    - regex: 'FO-R15(?:[);/ ]|$)'
+      device: 'tv'
+      model: 'FO-R15' # clone xiaomi m10 ultra
