Adds detection for MBOX brand

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -25186,6 +25186,12 @@ Malata:
   device: 'smartphone'
   model: '$1'
 
+# MBOX
+MBOX:
+  regex: 'MBOX(?:[);/ ]|$)'
+  device: 'tv'
+  model: ''
+
 # IT
 IT:
   regex: 'IT-(?:1101S?|1101-QUAD)(?:[);/ ]|$)'
