Adds detection for Q-Box brand

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17583,6 +17583,12 @@ Qtek:
   device: 'smartphone'
   model: '$1'
 
+# Q-Box
+Q-Box:
+  regex: 'QBOX(?:[);/ ]|$)'
+  device: 'tv'
+  model: ''
+
 # Q-Touch or Q.Touch or QTouch
 Q-Touch:
   regex: 'Qtouch_|[ ](Q09|QS701|Q05A|QS31)(?:[);/ ]|$)'
