Adds detection for Unknown M8S+ 4K

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -26626,7 +26626,7 @@ Meizu:
 
 # Devices with undectable brand, but detectable model
 Unknown:
-  regex: 'WebTV/(\d+\.\d+)|(?:M10 Ultra|FO-R15|TVBOX|Smart TV)(?:[);/ ]|$)'
+  regex: 'WebTV/(\d+\.\d+)|(?:M10 Ultra|FO-R15|TVBOX|Smart TV|M8S\+ 4K)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'WebTV/(\d+\.\d+)'
@@ -26644,3 +26644,6 @@ Unknown:
     - regex: 'Smart TV(?:[);/ ]|$)'
       device: 'tv'
       model: ''
+    - regex: 'M8S\+ 4K(?:[);/ ]|$)'
+      device: 'tv'
+      model: 'M8S+ 4K'
