Adds detection for unknown tv boxes

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -26626,7 +26626,7 @@ Meizu:
 
 # Devices with undectable brand, but detectable model
 Unknown:
-  regex: 'WebTV/(\d+\.\d+)|(?:M10 Ultra|FO-R15|TVBOX|Smart TV|M8S\+ 4K)(?:[);/ ]|$)'
+  regex: 'WebTV/(\d+\.\d+)|(?:M10 Ultra|FO-R15|TVBOX|Smart TV|M8S\+ 4K|PCBox|rk3368-box)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'WebTV/(\d+\.\d+)'
@@ -26638,10 +26638,7 @@ Unknown:
     - regex: 'FO-R15(?:[);/ ]|$)'
       device: 'tv'
       model: 'FO-R15'
-    - regex: 'TVBOX(?:[);/ ]|$)'
-      device: 'tv'
-      model: ''
-    - regex: 'Smart TV(?:[);/ ]|$)'
+    - regex: '(Smart TV|PCBox|rk3368-box|TVBOX)(?:[);/ ]|$)'
       device: 'tv'
       model: ''
     - regex: 'M8S\+ 4K(?:[);/ ]|$)'
