Remove question mark to avoid matching other mobile apps
The following user agents are not from Firefox Focus

* Be Focused/104 CFNetwork/976 Darwin/18.2.0
* Focus/1 CFNetwork/1240.0.4 Darwin/20.5.0
* Focus Matrix/155 CFNetwork/976 Darwin/18.2.0
* Klara/1 CFNetwork/1128.0.1 Darwin/19.6.0
* FLCore v3 - Window Focus
* Focuskeeper/2.0.15.4 CFNetwork/1240.0.4 Darwin/20.5.0

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1157,7 +1157,7 @@
     default: 'Goanna'
 
 #Firefox Focus / Firefox Klar
-- regex: '(?:Focus|Klar)(?:/(\d+[\.\d]+))?'
+- regex: '(?:Focus|Klar)(?:/(\d+[\.\d]+))'
   name: 'Firefox Focus'
   version: '$1'
 
