--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2037,7 +2037,7 @@ Alcatel:
       model: '1C (2019)'
     - regex: '5006[ADG]'
       model: '3C (2019)'
-    - regex: '5024[ADFIJ]|5028Y|6025H|6025D_EEA'
+    - regex: '5024[ADFIJ]|5028Y|6025[DH]'
       model: '1S'
     - regex: '5028[AD]'
       model: '1S (2020)'
@@ -3375,9 +3375,7 @@ Vivo:
       model: 'iQOO Z1'
     - regex: 'V2012A(?:[);/ ]|$)'
       model: 'iQOO Z1x'
-    - regex: 'V2073A(?:[);/ ]|$)'
-      model: 'iQOO Z3'
-    - regex: 'I2011(?:[);/ ]|$)'
+    - regex: '(?:V2073A|I2011)(?:[);/ ]|$)'
       model: 'iQOO Z3'
     - regex: 'V1919A(?:[);/ ]|$)'
       model: 'iQOO Z5x'
@@ -7295,7 +7293,7 @@ H96:
     - regex: 'Max(?:[);/ ]|$)'
       model: 'Max'
 
-# Hafury
+# Hafury (hafury.com)
 Hafury:
   regex: 'HAFURY|GT20(?:[);/ ]|$)'
   device: 'smartphone'
