feat(app) detect apps: Be Focused, Focus Keeper, Focus Matrix feat(device) rename CPH2197 A94 5G to A74 5G feat(device) rename PCCM00 Reno 10X to Reno 10X Zoom
issue #6948

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -989,3 +989,21 @@
     type: mobile app
     name: Instabridge
     version: ""
+-
+  user_agent: Be Focused/104 CFNetwork/976 Darwin/18.2.0
+  client:
+    type: mobile app
+    name: Be Focused
+    version: ""
+-
+  user_agent: Focuskeeper/2.0.15.4 CFNetwork/1240.0.4 Darwin/20.5.0
+  client:
+    type: mobile app
+    name: Focus Keeper
+    version: 2.0.15.4
+-
+  user_agent: Focus Matrix/155 CFNetwork/976 Darwin/18.2.0
+  client:
+    type: mobile app
+    name: Focus Matrix
+    version: ""
