--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -986,3 +986,18 @@
 - regex: 'Instabridge'
   name: 'Instabridge'
   version: ''
+
+# Be Focused (https://apps.apple.com/app/id973130201)
+- regex: 'Be Focused/(\d+\.[\.\d]+)?'
+  name: 'Be Focused'
+  version: '$1'
+
+# Focus Matrix (https://apps.apple.com/app/id1087284172)
+- regex: 'Focus Matrix/(\d+\.[\.\d]+)?'
+  name: 'Focus Matrix'
+  version: '$1'
+
+# Focus Keeper (https://apps.apple.com/app/id867374917)
+- regex: 'Focuskeeper/(\d+\.[\.\d]+)?'
+  name: 'Focus Keeper'
+  version: '$1'
