feat(bot) detect bots: Linespider, Cincraw

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4447,3 +4447,15 @@
     producer:
       name: Facebook
       url: http://www.facebook.com
+-
+  user_agent: Mozilla/5.0 (compatible; Linespider/1.1; https://lin.ee/4dwXkTH)
+  bot:
+    name: Linespider
+    category: Crawler
+    url: https://lin.ee/4dwXkTH
+-
+  user_agent: Mozilla/5.0 (compatible; Cincraw/1.0; +http://cincrawdata.net/bot/)
+  bot:
+    name: Cincraw
+    category: Crawler
+    url: http://cincrawdata.net/bot/
