--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2576,7 +2576,6 @@
   category: 'Crawler'
   url: 'https://github.com/VIPnytt/SitemapParser/'
 
-
 - regex: '^Turnitin'
   name: 'Turnitin'
   category: 'Crawler'
@@ -2600,6 +2599,16 @@
   name: 'Discord Bot'
   category: 'Service Agent'
   url: 'https://discordapp.com'
+
+- regex: 'Linespider/([\d+.]+)'
+  name: 'Linespider'
+  category: 'Crawler'
+  url: 'https://lin.ee/4dwXkTH'
+
+- regex: 'Cincraw/([\d+.]+)'
+  name: 'Cincraw'
+  category: 'Crawler'
+  url: 'http://cincrawdata.net/bot/'
 
 # Generic detections
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
